--- a/MANAGEMENT/management.css
+++ b/MANAGEMENT/management.css
@@ -401,6 +401,7 @@ header .container {
 .cta-section {
     position: relative;
     margin-top: -120px;
+    padding-bottom: 30px;
     z-index: 1;
 }
 
